@@ -1463,9 +1463,9 @@ ac_cv_env_$1_value=$$1])dnl
 # _AC_ARG_VAR_VALIDATE
 # --------------------
 # The precious variables are saved twice at the beginning of
-# configure.  E.g., PRECIOUS is saved as `ac_env_PRECIOUS_SET' and
-# `ac_env_PRECIOUS_VALUE' on the one hand and `ac_cv_env_PRECIOUS_SET'
-# and `ac_cv_env_PRECIOUS_VALUE' on the other hand.
+# configure.  E.g., PRECIOUS is saved as `ac_env_PRECIOUS_set' and
+# `ac_env_PRECIOUS_value' on the one hand and `ac_cv_env_PRECIOUS_set'
+# and `ac_cv_env_PRECIOUS_value' on the other hand.
 #
 # Now the cache has just been loaded, so `ac_cv_env_' represents the
 # content of the cached values, while `ac_env_' represents that of the
